--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Icon -->
     <link rel="icon" href="img/Icon Logo.png" />
-    <title>Landing Page</title>
+    <title>Navel</title>
 </head>
 
 <body>
